Fix misplaced overflow scroll on scene filter list

--- a/ui/v2.5/src/components/List/styles.scss
+++ b/ui/v2.5/src/components/List/styles.scss
@@ -80,6 +80,10 @@ input[type="range"].zoom-slider {
   }
 }
 
+.saved-filter-list-menu.dropdown-menu {
+  overflow-y: clip;
+}
+
 .saved-filter-list {
   list-style: none;
   margin-bottom: 0;
